feat: add interceptor auth on user
